--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,11 @@
-<header class="h-[200px] flex justify-center items-center">
-  <img src="assets/Logo.svg" alt="Logo" />
+<header
+  class="h-[200px] flex justify-center items-center bg-no-repeat bg-cover bg-center"
+>
+  <img src="assets/Logo.svg" class="aspect-auto" alt="Logo" />
 </header>
 
-<main class="bg-[#1c1d1f] p-5 w-full">
+<main
+  class="bg-[#1c1d1f] p-10 w-full mb-20 -mt-14 rounded-xl lg:max-w-[980px] lg:mx-auto xl:min-w-[1230px]"
+>
   <router-outlet />
 </main>
