--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,7 +1,7 @@
-<section class="grid gap-10">
-  <header class="flex justify-between items-center">
+<section class="grid gap-10 lg:grid-cols-[200px,1fr] xl:grid-cols-[250px,1fr]">
+  <header class="flex justify-between items-center lg:col-span-2">
     <strong class="text-custom-light-gray font-semibold">
-      Found 234 countries
+      Found {{ countries().length }} countries
     </strong>
     <search-bar />
   </header>
@@ -11,6 +11,6 @@
   </article>
 
   <article>
-    <countries-table />
+    <countries-table [headers]="tableHeaders" [countries]="countries()" />
   </article>
 </section>
