Add defer load of view row component

--- a/src/app/components/filters/filter-status/filter-status.component.html
+++ b/src/app/components/filters/filter-status/filter-status.component.html
@@ -5,7 +5,12 @@
     <label
       class="flex gap-3 items-center text-sm font-medium text-gray-900 dark:text-gray-300"
     >
-      <input type="checkbox" value="" class="size-5 rounded-2xl" />
+      <input
+        type="checkbox"
+        value=""
+        [id]="option"
+        class="size-5 rounded-2xl"
+      />
       {{ option }}
     </label>
     }
