--- a/src/app/components/filters/filter-region/filter-region.component.html
+++ b/src/app/components/filters/filter-region/filter-region.component.html
@@ -2,11 +2,26 @@
   <h3 class="text-xs font-medium text-custom-light-gray">Region</h3>
   <div class="mt-3 flex gap-3 flex-wrap">
     @for (option of regionOptions; track $index) {
-    <span
-      class="rounded-xl px-3 py-2 text-sm bg-custom-dark-gray shadow-sm hover:scale-105 hover:shadow-xl transition-all duration-200 cursor-pointer"
-    >
-      {{ option }}
-    </span>
+    <div>
+      <input
+        class="hidden peer"
+        type="checkbox"
+        [id]="option.name"
+        [value]="option.name"
+        [checked]="option.selected"
+        (click)="handleRegionSelect(regionCheckbox.checked, $index)"
+        #regionCheckbox
+      />
+      <label
+        [htmlFor]="option.name"
+        class="inline-flex items-center justify-between w-full px-3 py-2 text-gray-500 rounded-xl cursor-pointer text-sm dark:hover:text-gray-300 peer-checked:bg-custom-dark-gray hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 dark:text-gray-400 hover:bg-custom-dark-gray"
+      >
+        <div class="block">
+          {{ option.name | titlecase }}
+        </div>
+      </label>
+    </div>
+
     }
   </div>
 </article>
