--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,11 +1,11 @@
 <header
-  class="h-[340px] flex justify-center items-center bg-no-repeat bg-cover bg-center"
+  class="h-[300px] flex justify-center items-center bg-no-repeat bg-cover bg-center"
 >
   <img src="assets/Logo.svg" class="aspect-auto" alt="Logo" />
 </header>
 
 <main
-  class="bg-[#1c1d1f] p-10 w-full mb-20 -mt-16 rounded-xl lg:max-w-[900px] lg:mx-auto"
+  class="bg-[#1c1d1f] p-10 w-full mb-20 -mt-16 rounded-xl xl:min-w-[1230px] lg:max-w-[900px] lg:mx-auto"
 >
   <router-outlet />
 </main>
