--- a/src/app/components/filters/filter-region/filter-region.component.html
+++ b/src/app/components/filters/filter-region/filter-region.component.html
@@ -14,7 +14,7 @@
       />
       <label
         [htmlFor]="option.name"
-        class="inline-flex items-center justify-between w-full px-3 py-2 text-gray-500 rounded-xl cursor-pointer text-sm dark:hover:text-gray-300 peer-checked:bg-custom-dark-gray hover:text-gray-600 dark:peer-checked:text-gray-300 peer-checked:text-gray-600 dark:text-gray-400 hover:bg-custom-dark-gray"
+        class="inline-flex items-center justify-between w-full px-3 py-2 text-gray-500 rounded-xl cursor-pointer text-sm hover:text-gray-300 peer-checked:bg-custom-dark-gray peer-checked:text-gray-300 peer-checked:text-gray-600text-gray-400 hover:bg-custom-dark-gray"
       >
         <div class="block">
           {{ option.name | titlecase }}
