--- a/src/app/components/filters/filter-status/filter-status.component.html
+++ b/src/app/components/filters/filter-status/filter-status.component.html
@@ -2,9 +2,7 @@
   <h3 class="text-xs font-medium text-custom-light-gray">Status</h3>
   <div class="flex gap-2 flex-col mt-3">
     @for (option of statusOptions; track $index) {
-    <label
-      class="flex gap-3 items-center text-sm font-medium text-gray-900 dark:text-gray-300"
-    >
+    <label class="flex gap-3 items-center text-sm font-medium text-gray-300">
       <input
         type="checkbox"
         class="size-5 rounded-2xl"
