--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -8,7 +8,7 @@
     <input
       type="search"
       id="search"
-      class="w-[300px] px-4 py-3 ps-10 text-xs rounded-lg dark:bg-custom-dark-gray dark:border-gray-600 dark:placeholder-gray-400 dark:text-white hover:shadow-lg focus:outline-none"
+      class="w-[300px] px-4 py-3 ps-10 text-xs rounded-lg bg-custom-dark-gray border-gray-600 placeholder-gray-400/50 text-white hover:shadow-lg focus:outline-none"
       placeholder="Search by Name, Region, Subregion"
       required
       [formControl]="searchControl"
